fix: header align center issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,14 +96,12 @@ header {
     display: flex;
     align-items: center;
     font-size: 1.5rem;
-    margin: 0;
+    margin: auto;
 }
 
 .title {
     font-size: 1.5rem;
-    margin: auto;
-    width: 50%;
-    font-style: bold;
+    font-style: oblique;
 }
 
 .pages a {
